force-app/main/default/objects/Item__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <label>Family</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Electronics</fullName><default>true</default><label
        >Electronics</label></value>
            <value><fullName>Furniture</fullName><default>false</default><label
        >Furniture</label></value>
            <value><fullName>Office_Supplies</fullName><default
        >false</default><label>Office Supplies</label></value>
            <value><fullName>Other</fullName><default>false</default><label
        >Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>