force-app/main/default/objects/Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Product</fullName><default>true</default><label
        >Product</label></value>
            <value><fullName>Accessory</fullName><default>false</default><label
        >Accessory</label></value>
            <value><fullName>Supply</fullName><default>false</default><label
        >Supply</label></value>
            <value><fullName>Equipment</fullName><default>false</default><label
        >Equipment</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>