force-app/main/default/objects/Item__c/fields/Unsplash_Photographer__c.field-meta.xml
<CustomField>
    <fullName>Unsplash_Photographer__c</fullName>
    <label>Unsplash Photographer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>