force-app/main/default/objects/Item__c/fields/Unsplash_Profile_URL__c.field-meta.xml
<CustomField>
    <fullName>Unsplash_Profile_URL__c</fullName>
    <label>Unsplash Profile URL</label>
    <type>Url</type>
</CustomField>