force-app/main/default/objects/Item__c/validationRules/Price_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Price_Cannot_Be_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>Price__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Price__c</errorDisplayField>
    <errorMessage>Price cannot be negative.</errorMessage>
</ValidationRule>