force-app/main/default/objects/Item__c/validationRules/Quantity_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Cannot_Be_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>AvailableQuantity__c &lt; 0</errorConditionFormula>
    <errorDisplayField>AvailableQuantity__c</errorDisplayField>
    <errorMessage>Available quantity cannot be negative.</errorMessage>
</ValidationRule>